# StarPact-React

./: README.md  index.html  index参考代码.txt  main.cjs  package-lock.json  package.json  storage-test.html  vite.config.ts  文本对比功能我进行了优化.txt  新功能版本.txt  组件参考代码.txt  编译器组件参考代码.txt
.trae/documents/: INI配置页面和CodeEditor组件优化.md  存储功能适配实现计划.md  实现自定义程序窗口导航栏标题栏.md  新增八个不同风格的主题色.md
backend/: main.py
src/: App.tsx  index.css
src/components/: ChatControlPanel.tsx  ChatPage.tsx  ChatWelcome.tsx  CodeEditor.tsx  ComparePage.tsx  ConfirmDialog.tsx  ConversationContextMenu.tsx  CustomTitleBar.tsx  DownloadGuideModal.tsx  FFmpegConfigModal.tsx  GalleryComponents.tsx  ImageViewer.tsx  IndexedDBStorageStatus.tsx  LocalImage.tsx  LogsPanel.tsx  MessageBubble.tsx  MessageList.tsx  ModelsPage.tsx  NovelEditor.tsx  OllamaModal.tsx  PerformanceModal.tsx  PerformancePanel.tsx  PullModelPanel.tsx  Sidebar.tsx  SplashScreen.tsx  Toast.tsx  VideoPlayer.tsx  VirtualList.tsx  WallpaperList.tsx  WebShortcutPopup.tsx
src/constants/: config.ts  themes.ts
src/docs/: development-guide.md
项目重构/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
项目重构/src-tauri/: Cargo.toml  tauri.conf.json
项目重构/src-tauri/capabilities/: default.json
项目重构/src-tauri/src/: lib.rs  main.rs
项目重构/src-tauri/src/commands/: ffmpeg.rs  file.rs  gallery.rs  mod.rs  ollama.rs  storage.rs  wallpaper.rs
项目重构/src-tauri/src/models/: mod.rs
项目重构/src-tauri/src/services/: mod.rs
项目重构/src-tauri/src/services/storage/: backup.rs  config.rs  database.rs  mod.rs  paths.rs
(+197 files in other folders)
