[package]
name = "starpact-vue"
version = "1.0.0"
description = "星约 - 多功能智能桌面应用"
authors = ["Starpact Team"]
edition = "2021"

[lib]
name = "starpact_vue_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
once_cell = "1"
base64 = "0.22"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
